--- a/packageconfig.json
+++ b/packageconfig.json
@@ -1,11 +1,11 @@
 ﻿{
 
-    "gemName": "cloudmersive-spam-detection-api-client",
+    "gemName": "cloudmersive-phishing-detection-api-client",
     "gemLicense": "Apache 2.0",
     "gemVersion": "2.2.0",
-    "gemHomepage": "https://www.cloudmersive.com/spam-api",
-    "gemSummary": "Scan content for spam.",
-    "gemDescription": "Spam Detection API lets you scan content for spam using AI.",
+    "gemHomepage": "https://www.cloudmersive.com/phishing-api",
+    "gemSummary": "Scan URLs for phishing.",
+    "gemDescription": "Phishing Detection API lets you scan websites for phishing attacks using AI.",
     "gemAuthor": "Cloudmersive"
 
 }
